{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 14,
  "lineage": "efd17520-83a1-d4fe-fc1c-d46c87978ddd",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817566612550:vpc/vpc-0088728165a1be143",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02ffb6669f5b0ab17",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-042a4c3a40239bc76",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0088728165a1be143",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0759ce5131a1a4ae8",
            "owner_id": "817566612550",
            "tags": {
              "Name": "example-dev-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f1de95545ff296f",
            "domain": "vpc",
            "id": "eipalloc-02f1de95545ff296f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-200-15-125.compute-1.amazonaws.com",
            "public_ip": "52.200.15.125",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.development-vpc",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817566612550:internet-gateway/igw-085d174ae8b2d0310",
            "id": "igw-085d174ae8b2d0310",
            "owner_id": "817566612550",
            "tags": {
              "Name": "example-dev-ig"
            },
            "tags_all": {
              "Name": "example-dev-ig"
            },
            "vpc_id": "vpc-0088728165a1be143"
          },
          "dependencies": [
            "aws_vpc.development-vpc",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f1de95545ff296f",
            "connectivity_type": "public",
            "id": "nat-045c61777363120b1",
            "network_interface_id": "eni-04dcba8b7615d9cc5",
            "private_ip": "10.0.10.113",
            "public_ip": "52.200.15.125",
            "subnet_id": "subnet-022489b794233d912",
            "tags": {
              "Name": "example-dev-nat-gw"
            },
            "tags_all": {
              "Name": "example-dev-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817566612550:network-interface/eni-09b41e0461fef8040",
            "id": "eni-09b41e0461fef8040",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:63:d8:e4:69:e3",
            "owner_id": "817566612550",
            "private_ip": "10.0.10.10",
            "private_ip_list": [
              "10.0.10.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.10.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0cdabda397fff1c0e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022489b794233d912"
          },
          "dependencies": [
            "aws_security_group.app-sg-grp",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817566612550:route-table/rtb-0b4036743a69953c5",
            "id": "rtb-0b4036743a69953c5",
            "owner_id": "817566612550",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-045c61777363120b1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-dev-rt-private"
            },
            "tags_all": {
              "Name": "example-dev-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0088728165a1be143"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817566612550:route-table/rtb-0891d63fbae2cacea",
            "id": "rtb-0891d63fbae2cacea",
            "owner_id": "817566612550",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-085d174ae8b2d0310",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-dev-rt-public"
            },
            "tags_all": {
              "Name": "example-dev-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0088728165a1be143"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.development-vpc",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-private-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf1cd13464098bc6",
            "route_table_id": "rtb-0b4036743a69953c5",
            "subnet_id": "subnet-076cf9499e31d98f1"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.natgw",
            "aws_route_table.route-table-private",
            "aws_subnet.private-subnet-1",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-public-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038bdfe62fb5e2720",
            "route_table_id": "rtb-0891d63fbae2cacea",
            "subnet_id": "subnet-022489b794233d912"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route-table-public",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817566612550:security-group/sg-0cdabda397fff1c0e",
            "description": "Sg for app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdabda397fff1c0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-dev-app-sg",
            "name_prefix": "",
            "owner_id": "817566612550",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0088728165a1be143"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.development-vpc",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817566612550:subnet/subnet-076cf9499e31d98f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.110.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076cf9499e31d98f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817566612550",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-dev-private-us-east-1a"
            },
            "tags_all": {
              "Name": "example-dev-private-us-east-1a"
            },
            "vpc_id": "vpc-0088728165a1be143"
          },
          "dependencies": [
            "aws_vpc.development-vpc",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817566612550:subnet/subnet-022489b794233d912",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022489b794233d912",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817566612550",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-dev-public-us-east-1a"
            },
            "tags_all": {
              "Name": "example-dev-public-us-east-1a"
            },
            "vpc_id": "vpc-0088728165a1be143"
          },
          "dependencies": [
            "aws_vpc.development-vpc",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "development-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817566612550:vpc/vpc-0088728165a1be143",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0276477bb5056de3f",
            "default_route_table_id": "rtb-0759ce5131a1a4ae8",
            "default_security_group_id": "sg-008a6d01e1564e45f",
            "dhcp_options_id": "dopt-042a4c3a40239bc76",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0088728165a1be143",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0759ce5131a1a4ae8",
            "owner_id": "817566612550",
            "tags": {
              "Name": "example-dev-vpc"
            },
            "tags_all": {
              "Name": "example-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}